[tool.poetry]
name = "dict.cc.py"
version = "3.1.0"
description = "Unofficial dict.cc command line interface"
authors = [ "Raphael Baron" ]
packages = [ { include = "scripts" }, { include = "dictcc" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
"dict.cc.py" = "scripts.dictcc:run"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
